// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product groups Callback it can get a product group 1`] = `
Object {
  "body": Object {
    "accountOnFile": Object {
      "attributes": Array [
        Object {
          "key": "string",
          "mustWriteReason": "IN_THE_PAST",
          "status": "READ_ONLY",
          "value": "string",
        },
      ],
      "displayHints": Object {
        "labelTemplate": Array [
          Object {
            "attributeKey": "string",
            "mask": "string",
          },
        ],
        "logo": "string",
      },
      "id": -2147483648,
      "paymentProductId": 840,
    },
    "displayHints": Object {
      "displayOrder": -2147483648,
      "label": "string",
      "logo": "string",
    },
    "displayHintsList": Array [
      Object {
        "displayOrder": -2147483648,
        "label": "string",
        "logo": "string",
      },
    ],
    "id": "string",
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Product groups Callback it can get product groups 1`] = `
Object {
  "body": Object {
    "paymentProductGroups": Array [
      Object {
        "accountOnFile": Object {
          "attributes": Array [
            Object {
              "key": "string",
              "mustWriteReason": "IN_THE_PAST",
              "status": "READ_ONLY",
              "value": "string",
            },
          ],
          "displayHints": Object {
            "labelTemplate": Array [
              Object {
                "attributeKey": "string",
                "mask": "string",
              },
            ],
            "logo": "string",
          },
          "id": -2147483648,
          "paymentProductId": 840,
        },
        "displayHints": Object {
          "displayOrder": -2147483648,
          "label": "string",
          "logo": "string",
        },
        "displayHintsList": Array [
          Object {
            "displayOrder": -2147483648,
            "label": "string",
            "logo": "string",
          },
        ],
        "id": "string",
      },
    ],
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Product groups Promises it can get a product group 1`] = `
Object {
  "body": Object {
    "accountOnFile": Object {
      "attributes": Array [
        Object {
          "key": "string",
          "mustWriteReason": "IN_THE_PAST",
          "status": "READ_ONLY",
          "value": "string",
        },
      ],
      "displayHints": Object {
        "labelTemplate": Array [
          Object {
            "attributeKey": "string",
            "mask": "string",
          },
        ],
        "logo": "string",
      },
      "id": -2147483648,
      "paymentProductId": 840,
    },
    "displayHints": Object {
      "displayOrder": -2147483648,
      "label": "string",
      "logo": "string",
    },
    "displayHintsList": Array [
      Object {
        "displayOrder": -2147483648,
        "label": "string",
        "logo": "string",
      },
    ],
    "id": "string",
  },
  "isSuccess": true,
  "status": 200,
}
`;

exports[`Product groups Promises it can get product groups 1`] = `
Object {
  "body": Object {
    "paymentProductGroups": Array [
      Object {
        "accountOnFile": Object {
          "attributes": Array [
            Object {
              "key": "string",
              "mustWriteReason": "IN_THE_PAST",
              "status": "READ_ONLY",
              "value": "string",
            },
          ],
          "displayHints": Object {
            "labelTemplate": Array [
              Object {
                "attributeKey": "string",
                "mask": "string",
              },
            ],
            "logo": "string",
          },
          "id": -2147483648,
          "paymentProductId": 840,
        },
        "displayHints": Object {
          "displayOrder": -2147483648,
          "label": "string",
          "logo": "string",
        },
        "displayHintsList": Array [
          Object {
            "displayOrder": -2147483648,
            "label": "string",
            "logo": "string",
          },
        ],
        "id": "string",
      },
    ],
  },
  "isSuccess": true,
  "status": 200,
}
`;
